Se corrigen erratas

--- a/Ahorcado/index.html
+++ b/Ahorcado/index.html
@@ -16,7 +16,7 @@
         </div>
         <div>
             <form action="" class="form gap-3">
-                <label class="fs-2" for="numJugadores">Numero de jugadores:</label>
+                <label class="fs-2" for="numJugadores">Número de jugadores:</label>
                 <select id="numJugadores">
                     <option>1</option>
                     <option>2</option>
@@ -37,7 +37,7 @@
                         <li>Este ahorcado es de series y películas de dibujos animados.</li>
                         <li>Dispones de 10 intentos para resolver la palabra/s, en caso de no resolverla no puntuarás en esa ronda.</li>
                         <li>Dispones de un total de 1000 puntos por ronda, cada fallo restará 100 puntos.</li>
-                        <li>Puedes jugar un mínimo de 1 randa y un máximo de 10 rondas.</li>
+                        <li>Puedes jugar un mínimo de 1 ronda y un máximo de 10 rondas.</li>
                         <li>Puede jugar uno o dos jugadores.</li>
                     </ul>
                 </div>
