Se cambian las clases oculto y visible por el estilo de ocultar o mostrar un campo. Y el tamaño de las portadas

--- a/Ahorcado/index.html
+++ b/Ahorcado/index.html
@@ -29,16 +29,16 @@
 
             <div class="offcanvas offcanvas-end offcanvasmod" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                 <div class="offcanvas-header rosa">
-                    <h5 id="offcanvasRightLabel">Juego del ahoracado</h5>
+                    <h4 id="offcanvasRightLabel">Juego del ahoracado</h4>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
-                <div class="offcanvas-body">
+                <div class="offcanvas-body text-start">
                     <ul>
                         <li>Este ahorcado es de series y películas de dibujos animados.</li>
                         <li>Dispones de 10 intentos para resolver la palabra/s, en caso de no resolverla no puntuarás en esa ronda.</li>
                         <li>Dispones de un total de 1000 puntos por ronda, cada fallo restará 100 puntos.</li>
                         <li>Puedes jugar un mínimo de 1 ronda y un máximo de 10 rondas.</li>
-                        <li>Puede jugar uno o dos jugadores.</li>
+                        <li>Pueden jugar uno o dos jugadores.</li>
                     </ul>
                 </div>
             </div>  
