--- a/Ahorcado/jugadores.html
+++ b/Ahorcado/jugadores.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="title">Juego del ahorcado</div>
         </div>
-        <div  id="formularioJugador" class="row oculto">
+        <div  id="formularioJugador" class="row" style="display: none;">
             <div class="row mb-3">
                 <div>Datos de la partida</div>   
             </div>
