--- a/Ahorcado/partida.html
+++ b/Ahorcado/partida.html
@@ -32,11 +32,15 @@
                 <div class="row peliculas my-4">
                     <label class="fs-1" id="pelicula"></label>
                 </div>
-                <div id="acierto" class="row gap-5">
+                <div id="acierto" class="row gap-5" style="display: none;">
                     <div class="row">
-                        <img id="portada" class="col-4" style="display: none;"/>
+                        <img id="portada" class="col col-md-4 col-lg-3" style="display: none;"/>
                         <div id="descripcion" class="col fs-5 fw-normal bg-light bg-opacity-75 rounded-3 p-3" style="display: none;">
-                            <div >
+                            <div>
+                                <label class="fw-bold">Título:</label>
+                                <label id="titulo">
+                            </div>
+                            <div>
                                 <label class="fw-bold">Año:</label>
                                 <label id="anio">
                             </div>
@@ -50,10 +54,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
-                        <button id="proxJugador" type="button" class="col oculto" onclick="proximoJugador()">Siguiente Jugador</button>
-                        <button id="proxRonda" type="button" class="col oculto" onclick="nuevaPartida(parseInt(localStorage.getItem('rondaActual'))+1,localStorage.getItem('jugadorActual'))">Siguiente Ronda</button>
-                        <button id="ultimaRonda" type="button" class="col oculto" onclick="verPuntuaciones()">Puntuaciones totales</button>
+                    <div class="row justify-content-center m-4">
+                        <button id="proxJugador" type="button" class="btn btn2" style="display:none;" onclick="proximoJugador()">Siguiente Jugador</button>
+                        <button id="proxRonda" type="button" class="btn btn2" style="display:none;" onclick="nuevaPartida(parseInt(localStorage.getItem('rondaActual'))+1,localStorage.getItem('jugadorActual'))">Siguiente Ronda</button>
+                        <button id="ultimaRonda" type="button" class="btn btn2" style="display:none;" onclick="verPuntuaciones()">Puntuaciones totales</button>
                     </div>
                 </div>
                 <div id="botones">
@@ -88,12 +92,12 @@
                     </div>
                 </div>
             </div>
-            <div  id="canvas" class="oculto">
+            <div  id="canvas" class="col-3 canva" style="display:none;">
                 <canvas id="myCanvas">
                 </canvas>
             </div>
         </div>
-        <div id="puntajes" class="oculto">
+        <div id="puntajes" class="row" style="display:none;">
             <div class="col">
                 <table id="puntosFinales" class="m-auto table bg-light bg-opacity-75">
                     <tr>
